--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/media.css">
     <title>POMODORO</title>
 </head>
 <body>
